--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 
   <body>
     <header>
-      <div class="header-name"><h1>HOTEL CONTACT FORM</h1></div>
+      <div class="header-name"><h1>INDIA CONTACT FORM</h1></div>
       <nav class="nav-lists">
         <ul>
           <li>
-            <a href="https://github.com/junnoiri/cis-376-HOTEL" target="_blank"
+            <a href="https://junnoiri.github.io/cis-376-INDIA/" target="_blank"
               >See the Code</a
             >
           </li>
           <li>
             <a
-              href="https://gist.github.com/barrycumbie/892372aa45634b0a28b7354ea076bac6"
+              href="https://gist.github.com/barrycumbie/94d7c36ba2e18b02aeba969aa6078f23"
               target="_blank"
               >Story Card</a
             >
           </li>
           <li>
             <a
-              href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjunnoiri.github.io%2Fcis-376-HOTEL%2F"
+              href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjunnoiri.github.io%2Fcis-376-INDIA%2F"
               target="_blank"
               >Validity Checker</a
             >
