updated some contents

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="nav-lists">
         <ul>
           <li>
-            <a href="https://junnoiri.github.io/cis-376-INDIA/" target="_blank"
+            <a href="https://github.com/junnoiri/cis-376-INDIA" target="_blank"
               >See the Code</a
             >
           </li>
@@ -35,6 +35,11 @@
               >Validity Checker</a
             >
           </li>
+          <li>
+            <div class="reload-btn">
+              <button onclick="reloadPage()">Reload page</button>
+            </div>
+          </li>
         </ul>
         <div class="hamburger-menu">
           <div class="hamburger-bar"></div>
@@ -48,141 +53,151 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h1 class="text-center my-5">Give me your idea!!</h1>
-            <form action="#" method="POST">
-              <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  name="name"
-                  placeholder="Enter your name"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  name="email"
-                  placeholder="Enter your email"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="password"
-                  name="password"
-                  placeholder="Enter your password"
-                  required
-                />
-              </div>
-              <div class="form-check mb-3">
-                <label class="form-check-label">
+            <div id="main-container">
+              <h1 class="text-center my-5">Give me your idea!!</h1>
+              <form method="POST">
+                <div class="mb-3">
+                  <label for="name" class="form-label">Name</label>
                   <input
-                    class="form-check-input"
-                    type="checkbox"
-                    name="remember"
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    name="name"
+                    placeholder="Enter your name"
+                    required
                   />
-                  Remember me
-                </label>
-              </div>
-              <div class="mb-3">
-                <div>What is your favorite country's food?</div>
-                <div class="form-check">
-                  <input
-                    type="radio"
-                    class="form-check-input"
-                    name="optradio"
-                    id="radio1"
-                    value="Italy"
-                  />Italy
-                  <label class="form-check-label" for="radio1"></label>
                 </div>
-                <div class="form-check">
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
                   <input
-                    type="radio"
-                    class="form-check-input"
-                    name="optradio"
-                    id="radio2"
-                    value="France"
-                  />France
-                  <label class="form-check-label" for="radio2"></label>
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    name="email"
+                    placeholder="Enter your email"
+                    required
+                  />
                 </div>
-                <div class="form-check">
+                <div class="mb-3">
+                  <label for="password" class="form-label">Password</label>
                   <input
-                    type="radio"
-                    class="form-check-input"
-                    name="optradio"
-                    id="radio3"
-                    value="Spain"
-                  />Spain
-                  <label class="form-check-label" for="radio3"></label>
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    name="password"
+                    placeholder="Enter your password"
+                    required
+                  />
                 </div>
-                <div class="form-check">
-                  <input
-                    type="radio"
-                    class="form-check-input"
-                    name="optradio"
-                    id="radio4"
-                    value="Japan"
-                  />Japan
-                  <label class="form-check-label" for="radio4"></label>
+                <div class="form-check mb-3">
+                  <label class="form-check-label">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      name="remember"
+                    />
+                    Remember me
+                  </label>
                 </div>
-                <div class="form-check">
-                  <input
-                    type="radio"
-                    class="form-check-input"
-                    name="optradio"
-                    id="radio5"
-                    value="India"
-                  />India
-                  <label class="form-check-label" for="radio5"></label>
+                <div class="mb-3">
+                  <div>What is your favorite country's food?</div>
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      name="optradio"
+                      id="radio1"
+                      value="Italy"
+                    />Italy
+                    <label class="form-check-label" for="radio1"></label>
+                  </div>
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      name="optradio"
+                      id="radio2"
+                      value="France"
+                    />France
+                    <label class="form-check-label" for="radio2"></label>
+                  </div>
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      name="optradio"
+                      id="radio3"
+                      value="Spain"
+                    />Spain
+                    <label class="form-check-label" for="radio3"></label>
+                  </div>
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      name="optradio"
+                      id="radio4"
+                      value="Japan"
+                    />Japan
+                    <label class="form-check-label" for="radio4"></label>
+                  </div>
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      name="optradio"
+                      id="radio5"
+                      value="India"
+                    />India
+                    <label class="form-check-label" for="radio5"></label>
+                  </div>
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      name="optradio"
+                      id="radio6"
+                      value="United States"
+                    />United States
+                    <label class="form-check-label" for="radio6"></label>
+                  </div>
+                  <select
+                    id="foodOption"
+                    class="form-select"
+                    aria-label="Default select example"
+                  >
+                    <option selected value="empty">
+                      Please select one country from above
+                    </option>
+                  </select>
+                  <div id="selectedFood"></div>
                 </div>
-                <div class="form-check">
-                  <input
-                    type="radio"
-                    class="form-check-input"
-                    name="optradio"
-                    id="radio6"
-                    value="United States"
-                  />United States
-                  <label class="form-check-label" for="radio6"></label>
+                <div class="mb-3">
+                  <label for="message" class="form-label"
+                    >Please tell me why you like the food</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="message"
+                    name="message"
+                    rows="5"
+                    required
+                  ></textarea>
                 </div>
-                <select
-                  id="foodOption"
-                  class="form-select"
-                  aria-label="Default select example"
-                >
-                  <option selected>Please select one country from above</option>
-                </select>
-                <div id="selectedFood"></div>
-              </div>
-              <div class="mb-3">
-                <label for="message" class="form-label"
-                  >Please tell me why you like the food</label
-                >
-                <textarea
-                  class="form-control"
-                  id="message"
-                  name="message"
-                  rows="5"
-                  required
-                ></textarea>
-              </div>
-              <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="submit" class="btn btn-primary" id="btnLoadData">
-                  Load my data
-                </button>
-              </div>
-            </form>
+                <div class="text-center">
+                  <button type="submit" class="btn btn-primary" id="submitBtn">
+                    Submit
+                  </button>
+                  <button
+                    type="submit"
+                    class="btn btn-primary"
+                    id="btnLoadData"
+                  >
+                    Load my data
+                  </button>
+                </div>
+              </form>
+            </div>
           </div>
           <div class="col-lg-8" id="food-container"></div>
         </div>
